# Decentralized-Belt-System

./: .cz.toml  .dockerignore  .envrc  .gitignore  .justfile  BJJ_TEST_SCRIPTS_README.md  CHANGELOG.md  CLAUDE.md  ComponentDiagram.puml  Decentralized-Belt-System.cabal  Dockerfile  Dockerfile.base  Dockerfile.chainsync  Dockerfile.interaction-api  Dockerfile.mcp-server  Dockerfile.query-api  Dockerfile.runtime-base  Dockerfile.runtime-only  ENGINEERING-LOG.md  MCP-TO-DO.md  README.md  bjj-belt-system-blueprint.json  black_promotes_white_to_blue.sh  cabal.project  cabal.project.freeze  config_atlas.json  config_bjj_validators.json  docker-compose.yml  file.json  idei  inconsistencies-todos-consolidated.md  nginx.conf  note.txt  proces  simple_black_promotes_white_to_blue.sh  swagger-api.json  test_evidence_preview.txt
.cursor/: worktrees.json
.cursor/commands/commands/: accessibility-audit.md  add-documentation.md  add-error-handling.md  code-review.md  database-migration.md  debug-issue.md  docker-logs.md  fix-compile-errors.md  generate-api-docs.md  git-commit.md  git-push.md  lint-fix.md  lint-suite.md  onboard-new-developer.md  optimize-performance.md  refactor-code.md  run-all-tests-and-fix.md  security-audit.md  setup-new-feature.md  visualize.md  write-unit-tests.md
.cursor/rules/: cursor-rules.mdc  environment.mdc  self-improvement.mdc
.cursor/rules/architecture/: executables.mdc  offchain-rules.mdc  onchain-rules.mdc  project-architecture.mdc
.cursor/rules/haskell/: haskell-style.mdc
.cursor/rules/operations/: storage-ingestion.mdc
.cursor/rules/plutus/: plutus-rules.mdc  plutus-security.mdc
.cursor/rules/workflow/: api-versioning.mdc  build-and-test-after-plan.mdc  docs-and-api.mdc  new-concept-checklist.mdc  scripts.mdc  testing-and-config.mdc  versioning.mdc
.github/workflows/: chainsync.yml  interaction-api.yml  mcp-server.yml  query-api.yml
app/: Main.hs  TxBuildingExample.hs
config/: config_atlas.json  config_bjj_validators.json
docs/: ComponentDiagram.puml  Conceptual-ClassDiagram.puml  ConceptualERD.puml  DeveloperGuide.md  Documentation.md  Explorer-Website-UI-Design.md  ExplorerReadSideDataModel.md  HaskellStyleGuide.md  OnchainArchitecture.md  OnchainSecurityAudit.md  ProtocolUsecases.puml  README.md  SequenceDiagram-Memberships.puml  SequenceDiagram-UpdateProfile.puml  TxBuilding.md  UsecaseDiagram.puml  bjj-belt-system-blueprint.json  chain-sync-documentation.md  developer-guide.md  haskell-style-guide.md  onchain-architecture.md  onchain-security-audit.md  onchain-trace-codes.md  rules-alignment-report.md  specification.md  tests_evidence.txt  to-do-tasks.md
docs/architecture/: chain-sync.md  mcp-server.md
docs/swagger/: interaction-swagger-api.json  query-swagger-api.json
k8s/: README-Deploy-RO.md  README-Manifests-Structura.md  chain-sync.yaml  gateway.yaml  gatewayclass-traefik.yaml  ingress.yaml  namespace.yaml  server.yaml  traefik-gateway-rbac.yaml
puml/: ComponentDiagram.puml  Conceptual-ClassDiagram.puml  GantChartDiagram-phases.puml  SequenceDiagram-Achievements.puml  SequenceDiagram-CreateProfile-Organisation.puml  SequenceDiagram-CreateProfile-Practitioner.puml  SequenceDiagram-Memberships.puml  SequenceDiagram-RankPromotion.puml  SequenceDiagram-UpdateProfile.puml  StateDiagram-Achievement.puml  StateDiagram-Membership.puml  StateDiagram-Rank.puml  UsecaseDiagram.puml
scripts/: build-and-docker.sh  build-images.sh  populate_recent_activity.sh  populate_testnet.sh  regenerate_diagrams.sh  test_black_promotes_white_to_blue.sh  test_exunits.sh
src/DomainTypes/Profile/: Types.hs
src/Onchain/: BJJ.hs  Blueprint.hs  CIP68.hs  MintingPolicy.hs  ProfilesValidator.hs  PromotionsValidator.hs  Protocol.hs  RanksValidator.hs  Types.hs  Utils.hs
src/TxBuilding/: Context.hs  Exceptions.hs  Functors.hs  Interactions.hs  Lookups.hs  Operations.hs  Skeletons.hs  Transactions.hs  Utils.hs  Validators.hs
src/exe/: CLAUDE.md
src/exe/admin/: Main.hs
src/exe/chain-sync/: ChainSyncLogic.hs  ChainSyncServer.hs  ChainsyncAPI.hs  Ingestion.hs  KupoAltas.hs  KupoAtlas.hs  KupoClient.hs  Main.hs  Storage.hs
src/exe/interaction-api/: AppMonad.hs  IPFS.hs  InteractionAppMonad.hs  Main.hs  RestAPI.hs  ServiceHandlers.hs  ServiceRequests.hs  Types.hs
src/exe/mcp-server/: Main.hs
src/exe/query-api/: AppMonad.hs  Main.hs  QueryAppMonad.hs  RestAPI.hs  Types.hs
src/exe/query-api/Query/: Aggregates.hs  Common.hs  ExplorerMonthly.hs  Live.hs  Pages.hs  Projected.hs  Rules.hs  ServiceStatus.hs
src/exe/query-api/RestAPI/: Common.hs
src/exe/server/: AppMonad.hs  Main.hs  RestAPI.hs
src/exe/server/Query/: Common.hs  Live.hs  Projected.hs
src/lib/: Constants.hs  Utils.hs
src/lib/DomainTypes/Core/: Actions.hs  Types.hs
src/lib/DomainTypes/Profile/: Types.hs
src/lib/Onchain/: BJJ.hs  Protocol.hs  Utils.hs
src/lib/TxBuilding/: Context.hs  Functors.hs  Interactions.hs  Lookups.hs  Operations.hs  Skeletons.hs  Transactions.hs  Utils.hs
src/lib/chainsync-lib/: KupoAtlas.hs  KupoClient.hs
src/lib/mcp-server-lib/MCPServer/: App.hs  Clients.hs  Orphans.hs  Readiness.hs  Resources.hs  Schema.hs  Server.hs
src/lib/mcp-server-lib/resources/: annex-3.md  bjj-faq.md
src/lib/offchain-lib/: CLAUDE.md  Constants.hs  Ingestion.hs  Storage.hs  Utils.hs
src/lib/offchain-lib/TxBuilding/: Context.hs  Conversions.hs  Exceptions.hs  Functors.hs  Interactions.hs  Lookups.hs  Operations.hs  SafeOnchainLogic.hs  Skeletons.hs  Transactions.hs  Utils.hs  (+1 more)
src/lib/onchain-lib/: CLAUDE.md
src/offchain-lib/: Constants.hs
src/offchain-lib/TxBuilding/: Exceptions.hs  Interactions.hs  Lookups.hs
src/test/: BJJPropertyTests.hs  CLAUDE.md  Main.hs  TestRuns.hs  UnitTests.hs
src/test-mcp-integration/: Main.hs
src/test-mcp-integration/IntegrationTests/: MCPTools.hs
src/test/Test/: Fixtures.hs  Helpers.hs
src/test/UnitTests/: Achievement.hs  Cleanup.hs  MCPTools.hs  Membership.hs  Oracle.hs  Promotion.hs
src/webapi-lib/WebAPI/: Auth.hs  Health.hs
test/: BJJPropertyTests.hs  Main.hs  TestRuns.hs  UnitTests.hs  ValidatorPropertyTests.hs
(+45 files in other folders)
