cabal-version: 3.0
name:          Decentralized-Belt-System
version:       0.1.0.0
synopsis:
  A DApp to standardize BJJ belt rankings and lineages, ensuring global consistency and transparency, thus solving the issue of varying standards and unclear lineages in the BJJ community.

-- description:
homepage:      www.cardano.vip
license:       MIT
author:        Marius Georgescu
maintainer:    georgescumarius@live.com

-- copyright:
category:      Web3
build-type:    Simple

-- extra-source-files:


common common-options
  ghc-options:      -Wall
  default-language: GHC2021 
  build-depends:    base

common plinth-ghc-options
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints

  default-language:   GHC2021
  default-extensions: TemplateHaskell

  -- all Plinth modules should use the following GHC flags
  ghc-options:
    -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    -fno-full-laziness -fno-spec-constr -fno-specialise -fno-strictness
    -fno-unbox-strict-fields -fno-unbox-small-strict-fields
    -fconstraint-solver-iterations=0

  -- 
  ghc-options:        -fobject-code -fplugin-opt PlutusTx.Plugin:defer-errors

  -- set target plutus-core version
  ghc-options:        -fplugin-opt PlutusTx.Plugin:target-version=1.1.0

  -- Compiler flags (defaults)
  ghc-options:        -fplugin-opt PlutusTx.Plugin:no-remove-trace
  ghc-options:        -fplugin-opt PlutusTx.Plugin:no-optimize

library onchain-lib
  import:             common-options, plinth-ghc-options
  default-language:   Haskell2010
  hs-source-dirs:     src/lib/onchain-lib
  exposed-modules:
    Onchain.BJJ
    Onchain.Blueprint
    Onchain.CIP68
    Onchain.MintingPolicy
    Onchain.ProfilesValidator
    Onchain.Protocol
    Onchain.RanksValidator
    Onchain.Utils

  if !(impl(ghcjs) || os(ghcjs))
    build-depends: plutus-tx-plugin

  -- other-modules:    

  -- other-extensions:
  build-depends:
    , aeson
    , bytestring
    , containers
    , http-types
    , servant-server
    , swagger2
    , text

  --- Cardano specific dependencies
  build-depends:
    , plutus-core
    , plutus-ledger-api
    , plutus-tx

  hs-source-dirs:     src/lib
  default-extensions:
    BangPatterns
    BlockArguments
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    PatternSynonyms
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances
    ViewPatterns

library chainsync-lib
  import:             common-options
  default-language:   Haskell2010
  hs-source-dirs:     src/lib/chainsync-lib
  default-extensions:
    DataKinds
    DeriveGeneric
    NamedFieldPuns
    OverloadedStrings
    TemplateHaskell
    TypeOperators

  exposed-modules:
    KupoAtlas
    KupoClient

  build-depends:
    , aeson
    , base
    , base16-bytestring
    , cardano-api
    , containers
    , extra
    , http-client
    , http-client-tls
    , persistent
    , servant
    , servant-client
    , text

  --- Cardano specific dependencies
  build-depends:      atlas-cardano

library offchain-lib
  import:             common-options
  default-language:   Haskell2010
  hs-source-dirs:     src/lib/offchain-lib
  default-extensions:
    BlockArguments
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    FlexibleContexts
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    NamedFieldPuns
    OverloadedStrings
    RecordWildCards
    TupleSections
    TypeApplications

  exposed-modules:
    Constants
    DomainTypes.Core.Actions
    DomainTypes.Core.Types
    DomainTypes.Transfer.Types
    Ingestion
    Storage
    TxBuilding.Context
    TxBuilding.Exceptions
    TxBuilding.Functors
    TxBuilding.Interactions
    TxBuilding.Lookups
    TxBuilding.Operations
    TxBuilding.Skeletons
    TxBuilding.Transactions
    TxBuilding.Utils
    TxBuilding.Validators
    Utils

  build-depends:
    , aeson
    , bytestring
    , chainsync-lib
    , deriving-aeson
    , extra
    , mtl
    , onchain-lib
    , persistent
    , persistent-sqlite
    , servant-server
    , swagger2
    , text
    , time

  --- Cardano specific dependencies
  build-depends:
    , atlas-cardano
    , cardano-api
    , plutus-ledger-api
    , plutus-tx

library webapi-lib
  import:             common-options
  default-language:   Haskell2010
  hs-source-dirs:     src/lib/webapi-lib
  default-extensions:
    DataKinds
    NamedFieldPuns
    OverloadedStrings
    TypeOperators

  exposed-modules:
    WebAPI.Auth
    WebAPI.CORS
    WebAPI.ServiceProbe
    WebAPI.Utils

  build-depends:
    , aeson
    , http-types
    , servant
    , servant-server
    , swagger2
    , text
    , time
    , wai
    , wai-cors

executable admin
  import:           common-options
  main-is:          Main.hs
  hs-source-dirs:   src/exe/admin
  default-language: GHC2021
  build-depends:
    , base
    , offchain-lib
    , onchain-lib

  build-depends:
    , aeson
    , bytestring
    , optparse-applicative
    , text

  --- Cardano specific dependencies
  build-depends:
    , atlas-cardano
    , plutus-ledger-api
    , plutus-tx

executable interaction-api
  import:           common-options
  main-is:          Main.hs
  hs-source-dirs:   src/exe/interaction-api
  default-language: GHC2021
  ghc-options:      -threaded -rtsopts -with-rtsopts=-T -O2
  extra-lib-dirs:   /usr/lib /usr/local/lib
  other-modules:
    InteractionAppMonad
    RestAPI
    Types

  build-depends:
    , base
    , offchain-lib
    , onchain-lib
    , webapi-lib

  build-depends:
    , aeson
    , aeson-pretty
    , bytestring          ^>=0.11.5
    , deriving-aeson
    , esqueleto
    , extra
    , http-types          ^>=0.12.4
    , lens                ^>=5.2.3
    , mtl
    , multiset
    , persistent
    , persistent-sqlite
    , servant-options
    , servant-server
    , servant-swagger
    , servant-swagger-ui
    , swagger2
    , text
    , time
    , wai
    , warp

  --- Cardano specific dependencies
  build-depends:    atlas-cardano

executable query-api
  import:           common-options
  main-is:          Main.hs
  hs-source-dirs:   src/exe/query-api
  default-language: GHC2021
  ghc-options:      -threaded -rtsopts -with-rtsopts=-T -O2
  extra-lib-dirs:   /usr/lib /usr/local/lib
  other-modules:
    Query.Common
    Query.Live
    Query.Projected
    QueryAppMonad
    RestAPI
    Types

  build-depends:
    , base
    , offchain-lib
    , onchain-lib
    , webapi-lib

  build-depends:
    , aeson
    , aeson-pretty
    , bytestring          ^>=0.11.5
    , deriving-aeson
    , esqueleto
    , extra
    , http-types          ^>=0.12.4
    , lens                ^>=5.2.3
    , mtl
    , multiset
    , persistent
    , persistent-sqlite
    , servant-options
    , servant-server
    , servant-swagger
    , servant-swagger-ui
    , swagger2
    , text
    , time
    , wai
    , warp

  --- Cardano specific dependencies
  build-depends:    atlas-cardano

executable chainsync-service
  import:           common-options
  main-is:          Main.hs
  hs-source-dirs:   src/exe/chain-sync
  default-language: GHC2021
  build-depends:
    , base
    , chainsync-lib
    , offchain-lib
    , onchain-lib
    , webapi-lib

  build-depends:
    , aeson
    , bytestring
    , deriving-aeson
    , extra
    , mtl
    , persistent
    , persistent-sqlite
    , servant-server
    , swagger2
    , text
    , time
    , wai
    , warp

  other-modules:
    ChainsyncAPI
    ChainSyncLogic
    ChainSyncServer

  --- Cardano specific dependencies
  build-depends:
    , atlas-cardano
    , plutus-ledger-api
    , plutus-tx

test-suite test
  import:           common-options   
  default-language: GHC2021

  -- other-modules:
  -- other-extensions:
  type:             exitcode-stdio-1.0
  hs-source-dirs:   src/test
  main-is:          Main.hs
  other-modules:
    BJJPropertyTests
    TestRuns
    UnitTests

  build-depends:
    , base
    , offchain-lib
    , onchain-lib

  build-depends:
    , extra
    , hedgehog
    , mtl
    , tasty
    , tasty-hedgehog

  --- Cardano specific dependencies
  build-depends:
    , atlas-cardano
    , plutus-ledger-api
