cabal-version: 3.0
name:          Decentralized-Belt-System
version:       0.4.0
synopsis:
  A DApp to standardize BJJ belt rankings and lineages, ensuring global consistency and transparency, thus solving the issue of varying standards and unclear lineages in the BJJ community.

-- description:
homepage:      www.cardano.vip
license:       MIT
author:        Marius Georgescu
maintainer:    georgescumarius@live.com

-- copyright:
category:      Web3
build-type:    Simple

-- Required so `cabal install` / `cabal sdist` ship static assets embedded
-- at compile time via Template Haskell (`file-embed`) in
-- src/lib/mcp-server-lib/MCPServer/Resources.hs. Without this, the sdist
-- omits the file and Docker builds fail with
-- "src/lib/mcp-server-lib/resources/annex-3.md: openFile: does not exist".
extra-source-files:
  src/lib/mcp-server-lib/resources/annex-3.md
  src/lib/mcp-server-lib/resources/bjj-faq.md


common common-options
  ghc-options:      -Wall
  default-language: GHC2021 
  build-depends:    base

common plinth-ghc-options
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints

  default-language:   GHC2021
  default-extensions: TemplateHaskell

  -- all Plinth modules should use the following GHC flags
  ghc-options:
    -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    -fno-full-laziness -fno-spec-constr -fno-specialise -fno-strictness
    -fno-unbox-strict-fields -fno-unbox-small-strict-fields
    -fconstraint-solver-iterations=0

  -- 
  ghc-options:        -fobject-code -fplugin-opt PlutusTx.Plugin:defer-errors

  -- set target plutus-core version
  ghc-options:        -fplugin-opt PlutusTx.Plugin:target-version=1.1.0

  -- Compiler flags (defaults): no-remove-trace keeps traces; preserve-logging
  -- prevents optimization from removing trace messages (see Plutus troubleshooting).
  -- ghc-options:        -fplugin-opt PlutusTx.Plugin:preserve-logging
  ghc-options:        -fplugin-opt PlutusTx.Plugin:remove-trace
  ghc-options:        -fplugin-opt PlutusTx.Plugin:optimize

library onchain-lib
  import:             common-options, plinth-ghc-options
  default-language:   Haskell2010
  hs-source-dirs:     src/lib/onchain-lib
  exposed-modules:
    Onchain.BJJ
    Onchain.Blueprint
    Onchain.CIP68
    Onchain.LinkedList
    Onchain.Protocol
    Onchain.Protocol.Core
    Onchain.Protocol.Id
    Onchain.Protocol.Lookup
    Onchain.Protocol.Types
    Onchain.Utils
    Onchain.Validators.AchievementsValidator
    Onchain.Validators.MembershipsValidator
    Onchain.Validators.MintingPolicy
    Onchain.Validators.OracleNFTPolicy
    Onchain.Validators.OracleValidator
    Onchain.Validators.ProfilesValidator
    Onchain.Validators.RanksValidator

  if !(impl(ghcjs) || os(ghcjs))
    build-depends: plutus-tx-plugin

  -- other-modules:    

  -- other-extensions:
  build-depends:
    , bytestring
    , containers

  --- Cardano specific dependencies
  build-depends:
    , plutus-core
    , plutus-ledger-api
    , plutus-tx

  default-extensions:
    BangPatterns
    BlockArguments
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    PatternSynonyms
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances
    ViewPatterns

library chainsync-lib
  import:             common-options
  default-language:   Haskell2010
  hs-source-dirs:     src/lib/chainsync-lib
  default-extensions:
    DataKinds
    DeriveGeneric
    NamedFieldPuns
    OverloadedStrings
    TemplateHaskell
    TypeOperators

  exposed-modules:
    KupoAtlas
    KupoClient

  build-depends:
    , aeson
    , base
    , base16-bytestring
    , cardano-api
    , containers
    , extra
    , http-client
    , http-client-tls
    , persistent
    , servant
    , servant-client
    , text

  --- Cardano specific dependencies
  build-depends:      atlas-cardano

library offchain-lib
  import:             common-options
  default-language:   Haskell2010
  hs-source-dirs:     src/lib/offchain-lib
  default-extensions:
    BlockArguments
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    FlexibleContexts
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    NamedFieldPuns
    OverloadedStrings
    RecordWildCards
    TupleSections
    TypeApplications

  exposed-modules:
    Constants
    DomainTypes.Core.Actions
    DomainTypes.Core.BJJ
    DomainTypes.Core.Types
    DomainTypes.Rules.Promotion
    DomainTypes.Transfer.Filters
    DomainTypes.Transfer.OrderBy
    DomainTypes.Transfer.QueryResponses
    DomainTypes.Transfer.Types
    Ingestion
    Storage
    TxBuilding.Context
    TxBuilding.Conversions
    TxBuilding.Exceptions
    TxBuilding.Interactions
    TxBuilding.Lookups
    TxBuilding.Operations
    TxBuilding.SafeOnchainLogic
    TxBuilding.Skeletons
    TxBuilding.Transactions
    TxBuilding.Utils
    TxBuilding.Validators
    Utils

  build-depends:
    , aeson
    , bytestring
    , chainsync-lib
    , containers
    , deriving-aeson
    , extra
    , lens
    , mtl
    , onchain-lib
    , persistent
    , persistent-postgresql
    , servant-server
    , swagger2
    , text
    , time

  --- Cardano specific dependencies
  build-depends:
    , atlas-cardano
    , cardano-api
    , plutus-ledger-api
    , plutus-tx

library webapi-lib
  import:             common-options
  default-language:   Haskell2010
  hs-source-dirs:     src/lib/webapi-lib
  default-extensions:
    DataKinds
    NamedFieldPuns
    OverloadedStrings
    TypeOperators

  exposed-modules:
    WebAPI.Auth
    WebAPI.CORS
    WebAPI.ServiceProbe
    WebAPI.Utils

  build-depends:
    , aeson
    , deriving-aeson
    , http-types
    , lens
    , servant
    , servant-server
    , swagger2
    , text
    , time
    , wai
    , wai-cors

executable admin
  import:           common-options
  main-is:          Main.hs
  hs-source-dirs:   src/exe/admin
  default-language: GHC2021
  build-depends:
    , base
    , offchain-lib
    , onchain-lib

  build-depends:
    , aeson
    , bytestring
    , mtl
    , optparse-applicative
    , text

  --- Cardano specific dependencies
  build-depends:
    , atlas-cardano
    , plutus-ledger-api
    , plutus-tx

executable interaction-api
  import:           common-options
  main-is:          Main.hs
  hs-source-dirs:   src/exe/interaction-api
  default-language: GHC2021
  ghc-options:      -threaded -rtsopts -with-rtsopts=-T -with-rtsopts=-N -O2
  extra-lib-dirs:   /usr/lib /usr/local/lib
  other-modules:
    IPFS
    InteractionAppMonad
    RestAPI
    ServiceHandlers
    ServiceRequests
    Types

  build-depends:
    , base
    , offchain-lib
    , onchain-lib
    , webapi-lib

  build-depends:
    , aeson
    , aeson-pretty
    , bytestring             ^>=0.11.5
    , deriving-aeson
    , esqueleto
    , extra
    , http-client
    , http-client-tls
    , http-types             ^>=0.12.4
    , lens                   ^>=5.2.3
    , monad-logger
    , mtl
    , multiset
    , persistent
    , persistent-postgresql
    , servant-multipart
    , servant-options
    , servant-server
    , servant-swagger
    , servant-swagger-ui
    , swagger2
    , text
    , time
    , wai
    , warp

  --- Cardano specific dependencies
  build-depends:    atlas-cardano

executable query-api
  import:           common-options
  main-is:          Main.hs
  hs-source-dirs:   src/exe/query-api
  default-language: GHC2021
  ghc-options:      -threaded -rtsopts -with-rtsopts=-T -with-rtsopts=-N -O2
  extra-lib-dirs:   /usr/lib /usr/local/lib
  other-modules:
    Query.Aggregates
    Query.Common
    Query.ExplorerMonthly
    Query.Live
    Query.Pages
    Query.Projected
    Query.Rules
    Query.ServiceStatus
    QueryAppMonad
    RestAPI
    RestAPI.Common

  build-depends:
    , base
    , offchain-lib
    , onchain-lib
    , webapi-lib

  build-depends:
    , aeson
    , aeson-pretty
    , bytestring             ^>=0.11.5
    , containers
    , deriving-aeson
    , esqueleto
    , extra
    , http-types             ^>=0.12.4
    , lens                   ^>=5.2.3
    , monad-logger
    , mtl
    , multiset
    , persistent
    , persistent-postgresql
    , servant-options
    , servant-server
    , servant-swagger
    , servant-swagger-ui
    , swagger2
    , text
    , time
    , wai
    , warp

  --- Cardano specific dependencies
  build-depends:
    , atlas-cardano
    , plutus-ledger-api

executable chainsync-service
  import:           common-options
  main-is:          Main.hs
  hs-source-dirs:   src/exe/chain-sync
  ghc-options:      -threaded -rtsopts -with-rtsopts=-T -with-rtsopts=-N -O2
  default-language: GHC2021
  build-depends:
    , base
    , chainsync-lib
    , offchain-lib
    , onchain-lib
    , webapi-lib

  build-depends:
    , aeson
    , bytestring
    , deriving-aeson
    , extra
    , monad-logger
    , mtl
    , persistent
    , persistent-postgresql
    , servant-server
    , swagger2
    , text
    , time
    , wai
    , warp

  other-modules:
    ChainsyncAPI
    ChainSyncLogic
    ChainSyncServer

  --- Cardano specific dependencies
  build-depends:
    , atlas-cardano
    , plutus-ledger-api
    , plutus-tx

test-suite test
  import:           common-options   
  default-language: GHC2021

  -- other-modules:
  -- other-extensions:
  type:             exitcode-stdio-1.0
  hs-source-dirs:   src/test
  main-is:          Main.hs
  other-modules:
    BJJPropertyTests
    Test.Fixtures
    Test.Helpers
    TestRuns
    UnitTests
    UnitTests.Achievement
    UnitTests.Cleanup
    UnitTests.MCPTools
    UnitTests.Membership
    UnitTests.Oracle
    UnitTests.Promotion

  build-depends:
    , base
    , mcp
    , mcp-server-lib
    , offchain-lib
    , onchain-lib
    , text

  build-depends:
    , aeson
    , bytestring
    , containers
    , extra
    , hedgehog
    , http-client
    , http-client-tls
    , http-types
    , mtl
    , servant
    , servant-client
    , tasty
    , tasty-hedgehog
    , tasty-hunit
    , wai
    , warp

  --- Cardano specific dependencies
  build-depends:
    , atlas-cardano
    , plutus-ledger-api
    , plutus-tx

library mcp-server-lib
  import:             common-options
  default-language:   GHC2021
  hs-source-dirs:     src/lib/mcp-server-lib
  exposed-modules:
    MCPServer.Api.Interaction
    MCPServer.Api.Query
    MCPServer.App
    MCPServer.Clients
    MCPServer.Orphans
    MCPServer.Readiness
    MCPServer.Resources
    MCPServer.Schema
    MCPServer.Server
    MCPServer.Tools.Achievements
    MCPServer.Tools.Common
    MCPServer.Tools.Docs
    MCPServer.Tools.Memberships
    MCPServer.Tools.Profiles
    MCPServer.Tools.Promotions
    MCPServer.Tools.Search
    MCPServer.Tools.Transactions

  build-depends:
    , base
    , offchain-lib
    , onchain-lib
    , webapi-lib

  build-depends:
    , aeson
    , async
    , bytestring
    , containers
    , file-embed
    , http-api-data
    , http-client
    , http-client-tls
    , http-types
    , mcp
    , mtl
    , servant
    , servant-client
    , servant-client-core
    , servant-server
    , text
    , time
    , wai
    , warp

  --- Cardano specific dependencies
  build-depends:
    , atlas-cardano

executable mcp-server
  import:           common-options
  main-is:          Main.hs
  hs-source-dirs:   src/exe/mcp-server
  default-language: GHC2021
  ghc-options:      -threaded -rtsopts -with-rtsopts=-T -with-rtsopts=-N -O2
  build-depends:
    , base
    , mcp-server-lib

test-suite mcp-integration
  import:           common-options
  default-language: GHC2021
  type:             exitcode-stdio-1.0
  hs-source-dirs:   src/test-mcp-integration
  main-is:          Main.hs
  other-modules:
    IntegrationTests.MCPTools
  build-depends:
    , base
    , aeson
    , bytestring
    , http-client
    , http-client-tls
    , mcp-server-lib
    , offchain-lib
    , servant
    , servant-client
    , tasty
    , tasty-hunit
    , text
